# dct-autoencoder

./: LICENSE  README.md  pyproject.toml  usage.ipynb
assets/figures/: DCT Autoencoder.drawio
dct_autoencoder/: __init__.py  basis.py  core.py  visualization.py
torch_dct/: __init__.py  basis.py  core.py  utils.py  visualization.py
